[package]
name = "delboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16.3"
cursive-async-view = "^0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.72"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.14", features = ["full"] }
